[package]
name = "glim"
version = "0.1.0"
authors = ["remigourdon <gourdon.remi@gmail.com>"]
description = "CLI tool to manage local git repositories"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.13"
toml = "0.5"
directories = "3.0"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = { version = "0.8", default-features = false }
